--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,7 +1,9 @@
+:root {
+  font-size: 6.25%;
+}
 html {
   height: 100%;
   box-sizing: border-box;
-  font-size: 100%;
 }
 
 *,
@@ -16,8 +18,10 @@ body {
   height: 100%;
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  color: #3b3b3b;
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: 'Open Sans', sans-serif;
+  color: #000000;
+  background: #fbfbfb;
 }
 
 h1,
